c_prototypes.h

void koota_band_complex16(void * invec, void * inoutvec, size_t len);
void koota_bor_complex16(void * invec, void * inoutvec, size_t len);
void koota_bxor_complex16(void * invec, void * inoutvec, size_t len);
void koota_land_complex16(void * invec, void * inoutvec, size_t len);
void koota_lor_complex16(void * invec, void * inoutvec, size_t len);
void koota_lxor_complex16(void * invec, void * inoutvec, size_t len);
void koota_min_integer1(void * invec, void * inoutvec, size_t len);
void koota_max_integer1(void * invec, void * inoutvec, size_t len);
void koota_sum_integer1(void * invec, void * inoutvec, size_t len);
void koota_prod_integer1(void * invec, void * inoutvec, size_t len);
void koota_band_integer1(void * invec, void * inoutvec, size_t len);
void koota_bor_integer1(void * invec, void * inoutvec, size_t len);
void koota_bxor_integer1(void * invec, void * inoutvec, size_t len);
void koota_land_integer1(void * invec, void * inoutvec, size_t len);
void koota_lor_integer1(void * invec, void * inoutvec, size_t len);
void koota_lxor_integer1(void * invec, void * inoutvec, size_t len);
void koota_min_integer2(void * invec, void * inoutvec, size_t len);
void koota_max_integer2(void * invec, void * inoutvec, size_t len);